# embedded-wasm-blinky

./: Cargo.toml  README.md  build.rs
src/: led.rs  main.rs  platform.rs  uart.rs
wasm-app/src/: lib.rs
wasm-tests/: Cargo.toml  build.rs
wasm-tests/tests/: integration.rs
wit/: world.wit
