[package]
edition = "2024"
name = "t-wasm"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-alloc = "0.7"
wasmtime = { version = "43", default-features = false, features = [
    "runtime",
    "pulley",
] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[build-dependencies]
wasmtime = { version = "43", default-features = false, features = [
    "cranelift",
    "pulley",
    "all-arch",
] }
